Revised README
Updated README